syntax = "proto3";

option go_package = "github.com/cedi/icaltest/protos";

package meetingroom_display_epd;

enum BusyState {
    Free = 0;
    Tentative = 1;
    Busy = 2;
}

message CalendarEntry {
    string title = 1;
    int64 start = 2;
    int64 end = 3;
    bool all_day = 4;
    BusyState busy = 5;
    bool important = 6;
    string message = 7;
}

message CalendarResponse {
    int64 last_updated = 1;
    repeated CalendarEntry entries = 2;
}

message CalendarRequest {
    int64 timestamp = 1;
}

message CustomStatusRequest {
    int64 timestamp = 1;
}

message RefreshCalendarResponse {
    int64 timestamp = 1;
}

message CustomStatus {
    string icon = 1;
    int32 icon_size = 2;
    string title = 3;
    string description = 4;
}

service CalenderService {
    rpc GetCalendar(CalendarRequest) returns (CalendarResponse) {}
    rpc RefreshCalendar(CalendarRequest) returns (RefreshCalendarResponse) {}
    rpc GetCustomStatus(CustomStatusRequest) returns (CustomStatus) {}
    rpc SetCustomStatus(CustomStatus) returns (CustomStatus) {}
}
